--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -55,7 +55,7 @@ a:hover, a:active, a:focus {
 
     width: 100%;
     /* Set the fixed height of the footer here */
-    background-color: #222222;
+    background-color: #17141e;
     border-color: #333333;
 
     -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
