--- a/app/templates/base_email.html
+++ b/app/templates/base_email.html
@@ -8,7 +8,7 @@
     <title>{{ subject }}</title>
     <style type="text/css">
 	a {
-	    color: hsl(225, 35%, 78%);
+	    color: #c3aff1;
 	    text-decoration: none;
 	    -webkit-transition: all .1s linear;
 	    -moz-transition: all .1s linear;
@@ -17,7 +17,7 @@
 	}
 
 	a:hover, a:active, a:focus {
-	    color: hsl(224, 35%, 38%);
+	    color: #8a69d4;
 	    text-decoration: none;
 	}
 
@@ -103,12 +103,12 @@
             }
 
             .btn-primary table td:hover {
-                background-color: hsl(224, 35%, 38%) !important;
+                background-color: #8a69d4 !important;
             }
 
             .btn-primary a:hover {
-                background-color: hsl(224, 35%, 38%) !important;
-                border-color: hsl(224, 35%, 38%) !important;
+                background-color: #8a69d4 !important;
+                border-color: #8a69d4 !important;
             }
         }
     </style>
