--- a/applications/templates/include/application_form.html
+++ b/applications/templates/include/application_form.html
@@ -40,18 +40,28 @@
 
             make_field_typeahead('university', '{% static 'schools.json' %}');
             make_field_typeahead('degree', '{% static 'degrees.json' %}');
+            let cities_dict = {};
             $("#id_origin").typeahead({
                 minLength: 3,
                 source: function (query, process) {
                     $.get('https://api.teleport.org/api/cities/', {search: query}, function (data) {
-                        var cities = jQuery.map(data._embedded["city:search-results"], function (c) {
-                            return c.matching_full_name;
+                        jQuery.map(data._embedded["city:search-results"], function (c) {
+                            cities_dict[c.matching_full_name] = c._links['city:item'].href;
                         });
+                        var cities = Object.keys(cities_dict)
                         if ("others".includes(query.toLowerCase())){
                           cities.push("Others");
                         }
                         return process(cities);
                     });
+                },
+                afterSelect: function (data) {
+                    if (data !== 'Others') {
+                        let that = this;
+                        $.get(cities_dict[data], {}, function (data) {
+                            that.$element[0].value = data.full_name;
+                        })
+                    }
                 }
             });
 
